public class AParameters {
    /*
     * 初始化状态, trigger
     */
    public const string IDLE = "Idle";
    /*
     * 攻击种类，int
     * 
     * 
     */
    public const string ATTACKSTAT = "AttackStat";
    // 当前移动速度，float
    public const string SPEED = "Speed";
    // 是否着地，bool
    public const string GROUND = "Grounded";

    //public const string CLIMB = "Climb";

    // 开始翻滚，trigger
    public const string ROLL = "Roll";
    public const string KICK = "Kick";
    public const string HIT = "Hit";
    public const string DEATH = "Death";
    public const string SHIELD = "Shield";
    public const string CLIMB_STAT = "ClimbStat";
    public const string FALL_DOWN_LADDER = "FallDownLadder";
    public const string ANIME_PLAY_DELTA = "AnimePlayDelta";
    public const string LADDER_TOP = "LadderTop";
    public const string LADDER_BOTTOM = "LadderBottom";
}